<resources>
    <string name="app_name">MaisPratos</string>
    <string name="title_activity_lista_ingredientes">ListaIngredientes</string>
    <string name="digitar_o_mes">Digite o Mês</string>
    <string name="hint_nome">NOME</string>
    <string name="hint_email">E-MAIL</string>
    <string name="hint_confirma_email">CONFIRMAR E-MAIL</string>
    <string name="hint_senha">SENHA</string>
    <string name="hint_confirma_senha">CONFIRMAR SENHA</string>
    <string name="hint_codigo_barras">CÓDIGO DE BARRAS</string>
    <string name="hint_pais">PAÍS DE FABRICAÇÃO</string>
    <string name="hint_fabricante">FABRICANTE</string>
    <string name="hint_nome_produto">NOME DO PRODUTO</string>
    <string name="hint_unidade_medida">TIPO</string>
    <string name="btn_entrar">ENTRAR</string>
    <string name="btn_cadastro">NOVO CADASTRO</string>
    <string name="title_activity_ingredientes">IngredientesActivity</string>
    <string name="title_activity_pratos">PratosActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_lista_compras">ListaComprasActivity</string>
    <string name="title_activity_prato">PratoActivity</string>
</resources>
